# Ordinal-Engine

./: .gitignore  CMakeLists.txt  README.md
CMake/: CMakeConfigDirectory.cmake  CMakeConfigFunction.cmake  CMakeConfigGlobal.cmake
Engine/: CMakeLists.txt
Engine/Documentation/CodingStandard/: CodingStandard.md
Engine/Header/Runtime/: COrdinalRuntime.hpp
Engine/Header/Runtime/Core/: Core.hpp
Engine/Header/Runtime/Core/Assertion/: Assert.hh  Assert.hpp  Expect.hh
Engine/Header/Runtime/Core/Assertion/Impl/: Assert.inl  Expect.inl
Engine/Header/Runtime/Core/Debug/: SLogger.hpp
Engine/Header/Runtime/Core/Maths/: Maths.hpp
Engine/Header/Runtime/Core/Maths/Vector/: TVec.hpp  TVec1.hpp  TVec2.hpp  TVec3.hpp  TVec4.hpp  Vector.hpp
Engine/Header/Runtime/Core/Maths/Vector/Impl/: TVec1_FPU.inl  TVec2_FPU.inl  TVec3_FPU.inl  TVec4_FPU.inl
Engine/Header/Runtime/Core/Memory/: CMemoryManager.hpp  CMemoryTracker.hpp  Memory.hpp
Engine/Header/Runtime/Core/Memory/Allocator/: CStackAllocator.hpp  TBaseAllocator.hpp  TMallocAllocator.hpp  TNewAllocator.hpp  TPoolAllocator.hpp
Engine/Header/Runtime/Core/Memory/Allocator/Impl/: CStackAllocator.inl  TBaseAllocator.inl  TMallocAllocator.inl  TNewAllocator.inl  TNewAllocator.tcc  TPoolAllocator.inl
Engine/Header/Runtime/Core/Memory/Debug/: NewOverload.hpp
Engine/Header/Runtime/Core/StringHash/: StringHash.hpp
Engine/Header/Runtime/Network/Socket/: CSocket.hpp  SocketHandle.hh
Engine/Header/Runtime/Platform/: Platform.h
Engine/Header/Runtime/Platform/Configuration/: Compiler.hpp  Configuration.hh  Configuration.hpp  Platform.hh  Platform.hpp  Type.hh  Type.hpp
Engine/Header/Runtime/Platform/Hardware/: Configuration.hpp  Vector.hpp  Vector_SSE2.hpp  Vector_SSE4.hpp
Engine/Header/Runtime/Platform/Window/: CWindow.hpp
Engine/Header/Runtime/Rendering/: CRenderer.hpp  CRenderingEngine.hpp
Engine/Header/Runtime/Rendering/Helper/: VulkanHelper.hh
Engine/Header/Runtime/Rendering/Renderer/: CDirect3D12Renderer.hpp  COpenGL3Renderer.hpp  COpenGL4Renderer.hpp  CVulkanRenderer.hpp  IRenderer.hpp  IWindow.hpp  Renderers.hpp
Engine/Header/Runtime/Rendering/Renderer/Direct3D12/: CDirect3D12Renderer.hpp
Engine/Header/Runtime/Rendering/Renderer/OpenGL3/: COpenGL3Renderer.hpp
Engine/Header/Runtime/Rendering/Renderer/OpenGL4/: COpenGL4Renderer.hpp
Engine/Header/Runtime/Rendering/Renderer/Vulkan/: CVulkanInstance.hpp  CVulkanLogicalDevice.hpp  CVulkanPhysicalDevice.hpp  CVulkanQueueFamily.hpp  CVulkanRenderer.hpp  CVulkanWindow.hpp
Engine/Header/Runtime/Rendering/Renderer/Vulkan/Debug/: CVulkanDebugReporter.hpp  VulkanDebugCallback.hpp
Engine/Header/Runtime/Rendering/Renderer/Vulkan/Helper/: CVulkanFunctionLoader.hpp
Engine/Header/Runtime/Rendering/Renderer/Vulkan/Helper/Impl/: CVulkanFunctionLoader.inl
Engine/Header/Runtime/Rendering/Renderer/Vulkan/Impl/: CVulkanLogicalDevice.inl  CVulkanPhysicalDevice.inl  CVulkanQueueFamily.inl
Engine/Header/Runtime/Rendering/Vulkan/: CVulkanInstance.hpp  CVulkanPhysicalDevice.hpp
Engine/Header/Runtime/Rendering/Window/: CWindow.hpp
Engine/Source/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  COrdinalRuntime.cpp  Main.cpp
Engine/Source/Runtime/Core/Debug/: SLogger.cpp
Engine/Source/Runtime/Core/Memory/: CMemoryManager.cpp  CMemoryTracker.cpp
Engine/Source/Runtime/Core/Memory/Allocator/: CStackAllocator.cpp
Engine/Source/Runtime/Platform/Window/: CWindow.cpp  CWindow_win32.cpp  Window_win32.cpp
Engine/Source/Runtime/Rendering/: CRenderer.cpp  CRenderingEngine.cpp
Engine/Source/Runtime/Rendering/Renderer/: CDirect3D12Renderer.cpp  COpenGL3Renderer.cpp  COpenGL4Renderer.cpp  CRenderingEngine.cpp  CVulkanRenderer.cpp
Engine/Source/Runtime/Rendering/Renderer/Direct3D12/: CDirect3D12Renderer.cpp
Engine/Source/Runtime/Rendering/Renderer/OpenGL3/: COpenGL3Renderer.cpp
Engine/Source/Runtime/Rendering/Renderer/OpenGL4/: COpenGL4Renderer.cpp
Engine/Source/Runtime/Rendering/Renderer/Vulkan/: CVulkanLogicalDevice.cpp  CVulkanPhysicalDevice.cpp  CVulkanQueueFamily.cpp  CVulkanRenderer.cpp  CVulkanWindow.cpp
Engine/Source/Runtime/Rendering/Renderer/Vulkan/Debug/: CVulkanDebugReporter.cpp  VulkanDebugCallback.cpp
Engine/Source/Runtime/Rendering/Renderer/Vulkan/Helper/: CVulkanFunctionLoader.cpp
Engine/Source/Runtime/Rendering/Vulkan/: CVulkanInstance.cpp  CVulkanPhysicalDevice.cpp
Engine/Source/Runtime/Rendering/Window/: CWindow.cpp
Engine/UnitTest/: CMakeLists.txt
Engine/UnitTest/Runtime/: CMakeLists.txt
Engine/UnitTest/Runtime/Core/Memory/: UnitTest_CStackAllocator.cpp
Engine/UnitTest/Runtime/Platform/Hardware/: UnitTest_Vector_SSE2.cpp
